--- a/sass/style.scss
+++ b/sass/style.scss
@@ -70,3 +70,4 @@
 @import "partials/patterns/col-list";
 @import "partials/patterns/split";
 @import "partials/patterns/inline-list";
+@import "partials/patterns/pagination";
