--- a/app/templates/audit.logs.twig
+++ b/app/templates/audit.logs.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% import 'partials/pagination.twig' as pagination %}
 
 {% set page_title = "Audit Log History" %}
 
@@ -9,13 +10,6 @@
     <p>Changes to database entities will be logged on this page.</p>
 
     <table class="tablesaw tablesaw-stack" data-mode="stack">
-        <colgroup>
-            <col>
-            <col>
-            <col>
-            <col>
-            <col class="t50">
-        </colgroup>
         <thead>
             <th>Date</th>
             <th>User</th>
@@ -42,34 +36,6 @@
         </tbody>
     </table>
 
-    <ol class="nav--pagination">
-        <li class="nav--pagination__prev">
-            {% if page > 1 %}
-                <a href="{{ urlFor('logs.page', {'page': page-1}) }}">
-                    <svg class="icon"><use xlink:href="#caret-left"></use></svg>newer
-                </a>
-            {% else %}
-                <span class="disabled">
-                    <svg class="icon"><use xlink:href="#caret-left"></use></svg>newer
-                </span>
-            {% endif %}
-        </li>
-        <li>
-            {% if last > 1 %}
-                <span class="pages">page {{ page }} of {{ last }}</span>
-            {% endif %}
-        </li>
-        <li class="nav--pagination__next">
-            {% if page < last %}
-                <a href="{{ urlFor('logs.page', {'page': page+1}) }}">
-                    older <svg class="icon mls"><use xlink:href="#caret-right"></use></svg>
-                </a>
-            {% else %}
-                <span class="disabled">
-                    older <svg class="icon mls"><use xlink:href="#caret-right"></use></svg>
-                </span>
-            {% endif %}
-        </li>
-    </ol>
+    {{ pagination.pagination(page, last, 'logs.page', {}) }}
 
 {% endblock %}
