--- a/app/templates/partials/build-table.twig
+++ b/app/templates/partials/build-table.twig
@@ -45,7 +45,7 @@
             <td{{ canPush ? ' class="js-build-push"' }}>
                 {% if build.status == 'Success' %}
                     {% if canUserPush(currentUser, build.repository.key, build.environment.key) %}
-                        <a href="{{ urlFor('push.start', {'build': build.id}) }}">Push</a>
+                        <a class="btn btn--tiny" href="{{ urlFor('push.start', {'build': build.id}) }}">Push</a>
                     {% endif %}
                 {% endif %}
             </td>
