--- a/sass/partials/_js.scss
+++ b/sass/partials/_js.scss
@@ -55,6 +55,13 @@
 }
 
 /**
+ * Add Deployments
+ */
+.js-add-deployment__form {
+    display: none;
+}
+
+/**
  * Dashboard Quick Select
  */
 .js-hide-box {
