--- a/app/templates/environment/admin.edit.twig
+++ b/app/templates/environment/admin.edit.twig
@@ -14,7 +14,7 @@
             </ul>
         {% endif %}
 
-        <form action="{{ urlFor('environment.admin.edit.handle') }}" method="post">
+        <form method="post">
             <ul class="form-fields">
                 <li>
                     <label for="name">Name</label>
