Fix baaaaad bug on repo status page when some deployments have never been pushed to

--- a/app/templates/repository/status.twig
+++ b/app/templates/repository/status.twig
@@ -38,6 +38,7 @@
                     {% endif %}
 
                     {# Determine the active push #}
+                    {% set activePush = null %}
                     {% if status.latest.status in ['Waiting', 'Pushing'] %}
                         {% set activePush = status.latest %}
                     {% elseif status.success %}
