--- a/app/templates/user/settings.twig
+++ b/app/templates/user/settings.twig
@@ -6,7 +6,7 @@
 
     <h2>Settings</h2>
 
-    <form action="{{ urlFor('user.preferences.handle', {id: user.id}) }}" method="post">
+    <form action="{{ urlFor('settings.handler', {id: user.id}) }}" method="post">
 
         <h3>HAL Preferences</h3>
         <p class="mbn">Customize the items on the navigation menu</p>
