Simplify env reordering, convert form handler to middleware

--- a/app/templates/environment/admin.reorder.twig
+++ b/app/templates/environment/admin.reorder.twig
@@ -6,7 +6,7 @@
     <h2>Reorder Environments</h2>
     <p>Drag environments into the desired order, or manually assign orders with the text input.</p>
 
-    <form action="{{ urlFor('environment.admin.reorder.handle') }}" method="post">
+    <form method="post">
         <table id="env-reorder">
             <thead>
             <tr>
