Clean up route handles

--- a/app/templates/group/admin.edit.twig
+++ b/app/templates/group/admin.edit.twig
@@ -14,7 +14,7 @@
             </ul>
         {% endif %}
 
-        <form action="{{ urlFor('group.admin.edit.handle', {id: group.id}) }}" method="post">
+        <form method="post">
             <ul class="form-fields">
                 <li>
                     <label for="name">Name</label>
