--- a/app/templates/group/group.twig
+++ b/app/templates/group/group.twig
@@ -57,7 +57,7 @@
 
             {% if not repos and isUserAdmin(currentUser) %}
             <li class="choice-list__choice">
-                <a class="btn--destructive secondary-action" href="{{ urlFor('group.admin.remove.handle', {id: group.id}) }}">Remove Group</a>
+                <a class="btn--destructive secondary-action" href="{{ urlFor('group.admin.remove', {id: group.id}) }}">Remove Group</a>
             </li>
             {% endif %}
         </ul>
