--- a/app/templates/repository/admin.add.twig
+++ b/app/templates/repository/admin.add.twig
@@ -14,7 +14,7 @@
             </ul>
         {% endif %}
 
-        <form action="{{ urlFor('repository.admin.add.handle') }}" method="post">
+        <form method="post">
             <ul class="form-fields">
                 <li>
                     <label for="name">
