--- a/app/templates/server/admin.edit.twig
+++ b/app/templates/server/admin.edit.twig
@@ -14,7 +14,7 @@
             </ul>
         {% endif %}
 
-        <form action="{{ urlFor('server.admin.edit.handle', {id: server.id}) }}" method="post">
+        <form method="post">
             <ul class="form-fields">
                 <li>
                     <label for="hostname">Hostname</label>
