--- a/app/templates/repository/repository.twig
+++ b/app/templates/repository/repository.twig
@@ -29,7 +29,7 @@
         {% endif %}
 
         {% if isUserAdmin(currentUser) and not deployment_count and isUserAdmin(currentUser) %}
-            <a class="btn--destructive secondary-action" href="{{ urlFor('repository.admin.remove.handle', {id: repository.id}) }}">Remove Repository</a>
+            <a class="btn--destructive secondary-action" href="{{ urlFor('repository.admin.remove', {id: repository.id}) }}">Remove Repository</a>
         {% endif %}
     </div>
 
