--- a/app/templates/server/server.twig
+++ b/app/templates/server/server.twig
@@ -47,7 +47,7 @@
         {% if isUserAdmin(currentUser) %}
             <a class="btn--action" href="{{ urlFor('server.admin.edit', {id: server.id}) }}">Edit</a>
             {% if not deployments and isUserAdmin(currentUser) %}
-                <a class="btn--destructive secondary-action" href="{{ urlFor('server.admin.remove.handle', {id: server.id}) }}">Remove Server</a>
+                <a class="btn--destructive secondary-action" href="{{ urlFor('server.admin.remove', {id: server.id}) }}">Remove Server</a>
             {% endif %}
         {% endif %}
     </div>
